--- a/BackendManagement/BackendManagement.csproj
+++ b/BackendManagement/BackendManagement.csproj
@@ -13,4 +13,9 @@
     <PackageReference Include="Prism.DryIoc" Version="8.1.97" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BackendManagement.BusinessView\BackendManagement.BusinessView.csproj" />
+    <ProjectReference Include="..\BackendManagement.CommonView\BackendManagement.CommonView.csproj" />
+  </ItemGroup>
+
 </Project>
