--- a/BackendManagement.BusinessView/BackendManagement.BusinessView.csproj
+++ b/BackendManagement.BusinessView/BackendManagement.BusinessView.csproj
@@ -7,6 +7,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <BaseOutputPath></BaseOutputPath>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
