--- a/BackendManagement.CommonView/BackendManagement.CommonView.csproj
+++ b/BackendManagement.CommonView/BackendManagement.CommonView.csproj
@@ -7,9 +7,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <BaseOutputPath></BaseOutputPath>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FreeSql" Version="3.2.821" />
     <PackageReference Include="Prism.Unity" Version="8.1.97" />
   </ItemGroup>
 
