--- a/BackendManagement.Model/BackendManagement.Model.csproj
+++ b/BackendManagement.Model/BackendManagement.Model.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FreeSql" Version="3.2.821" />
+  </ItemGroup>
 
 </Project>
