--- a/BackendManagement.CommonView/BackendManagement.CommonView.csproj
+++ b/BackendManagement.CommonView/BackendManagement.CommonView.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Prism.Unity" Version="8.1.97" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BackendManagement.Model\BackendManagement.Model.csproj" />
+  </ItemGroup>
+
 </Project>
