--- a/BackendManagement.CommonView/BackendManagement.CommonView.csproj
+++ b/BackendManagement.CommonView/BackendManagement.CommonView.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="FreeSql" Version="3.2.821" />
+    <PackageReference Include="MaterialDesignThemes" Version="5.0.0" />
     <PackageReference Include="Prism.Unity" Version="8.1.97" />
   </ItemGroup>
 
