--- a/BackendManagement.BusinessView/BackendManagement.BusinessView.csproj
+++ b/BackendManagement.BusinessView/BackendManagement.BusinessView.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MaterialDesignThemes" Version="5.0.0" />
     <PackageReference Include="Prism.Unity" Version="8.1.97" />
     <PackageReference Include="ScottPlot.WPF" Version="5.0.26" />
   </ItemGroup>
